--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         <script src="js/player.js"></script>
         <script src="js/enemies/turtle.js"></script>
         <script src="js/enemies/miscEnemies.js"></script>
+        <script src="js/enemies/charon.js"></script>
 
         <script src="js/projectile.js"></script>
 
