Finish spore enemy

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <script src="js/enemies/turtle.js"></script>
         <script src="js/enemies/miscEnemies.js"></script>
         <script src="js/enemies/charon.js"></script>
+        <script src="js/enemies/sporeEnemy.js"></script>
 
         <script src="js/projectile.js"></script>
 
