--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         <script src="js/enemies/miscEnemies.js"></script>
         <script src="js/enemies/charon.js"></script>
         <script src="js/enemies/sporeEnemy.js"></script>
+        <script src="js/enemies/hades.js"></script>
 
         <script src="js/projectile.js"></script>
 
