--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         <script src="js/scene/worldMapScene.js"></script>
         <script src="js/scene/actions.js"></script>
         <script src="js/scene/cutscene.js"></script>
+        <script src="view.js"></script>
         <script src="app.js"></script>
     </body>
 </html>
